--- a/javascript/jtask-2/style.css
+++ b/javascript/jtask-2/style.css
@@ -11,6 +11,7 @@ textarea{
     outline: none;
     color: white;
     background-color:transparent;
+    backdrop-filter: blur(15px);
 }
 textarea::placeholder{
     color: gray;
