--- a/javascript/jtask-2/style.css
+++ b/javascript/jtask-2/style.css
@@ -1,5 +1,5 @@
 #formtext{
-    background-image: url(./img/hero-bg.jpg);
+/*     background-image: url(./img/hero-bg.jpg); */
      height: 150vh;
       background-position: end;
       background:linear-gradient(rgb(1 1 2 / 57%), rgb(1 1 2 / 57%)),url(../Jstask-1/img/hero-bg.jpg);
